--- a/src/routes/searchPage/search.css
+++ b/src/routes/searchPage/search.css
@@ -120,7 +120,8 @@
 .sidebar {
   width: 25%;
   max-width: 250px;
-  position: sticky;
+  position: relative;
+  justify-self: self-end;
   align-self: center;
 }
 
